--- a/app/globals.css
+++ b/app/globals.css
@@ -1,27 +1,250 @@
+@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+:root{
+  --primary-color: #F99909;
+  --secondary-color: #CDCCCC;
+  --tertiary-color: #575757;
+  --accent: #4E4E4E;
+  --dark: #1A1A1A;
+  --primaryAlt: #251E13;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+::-webkit-scrollbar{
+  display: none;
+}
+
+@media screen and ( min-width: 1280px) {
+  main{
+    margin-inline: auto;
+    max-width: 1024px;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
   }
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+
+.navLinks > li > a {
+  padding-inline: 0.5rem;
+  border: solid 1px transparent;
+  transition: 0.2s;
+  overflow: hidden;
 }
+
+.activeNav {
+  border: solid 1px var(--primary-color) !important;
+  background-color: var(--primaryAlt);
+  position: relative;
+  color: white;
+}
+
+.navLinks > li > a::before {
+  content: url('https://svgshare.com/i/ypy.svg');
+  position: absolute;
+  top: -46%;
+  left: -5.35%;
+}
+
+.navLinks > li > a::after {
+  content: url('https://svgshare.com/i/yq6.svg');
+  position: absolute;
+  bottom: -41.75%;
+  right: -5.75%;
+}
+
+.navLinks > li:nth-child(2) > a::after{
+  right: -5.35%;
+}
+
+.navLinks > li:nth-child(3) > a::after{
+  right: -5.5%;
+}
+
+.navLinks > li:nth-child(4) > a::before{
+  left: -4.5%;
+}
+
+.navLinks > li:nth-child(4) > a::after{
+  right: -4.5%;
+}
+
+
+
+.landing > *{
+  border-radius: 0.125rem;
+}
+
+.landing > a {
+  border: 1px solid var(--tertiary-color);
+  padding: 1rem;
+}
+
+.logo{
+  grid-column: 1 / 4;
+  grid-row: 1 / 1;
+  border: none !important;
+  padding: 0px !important;
+}
+
+.contact{
+  grid-column: 4 / 12;
+  grid-row: 1 / 1;
+}
+
+.hero{
+  border: 1px solid var(--tertiary-color);
+  padding: 1rem;
+  grid-column: 1 / 6;
+  grid-row: 2 / 5;
+}
+
+.about{
+  grid-column: 6 / -1;
+  grid-row: 2 / 4;
+}
+
+.skills{
+  grid-column: 1 / 7;
+  grid-row: 5 / -1;
+}
+
+.experience{
+  grid-column: 7 / 10;
+  grid-row: 4 / -1;
+}
+
+.work{
+  grid-column: 10 / -1;
+  grid-row: 4 / 6;
+}
+
+.copyright{
+  grid-column: 10 / -1;
+  grid-row: 6 / 7;
+}
+
+.icon svg{
+  width: 40px ;
+  height: 40px ;
+}
+
+.icon svg > path {
+  fill: var(--accent);
+  transition: 0.2s;
+}
+
+.logoRow > div:hover  svg > path {
+  fill: white;
+}
+
+.icon{
+  width: 40px;
+  height: 40px;
+}
+
+.icon:hover > div {
+  opacity: 1;
+  transition: 0.2s;
+}
+
+.icon:hover > div:nth-child(1){
+  transform: translate(-50% , -30px);
+}
+
+.icon:hover > div:nth-child(2){
+  transform: translate(-70% , -20px);
+}
+
+.icon:hover > div:nth-child(3){
+  transform: translate(70% , -20px);
+}
+
+.icon:hover > div:nth-child(4){
+  transform: translate(-50% , 30px);
+}
+
+.lukeyLogo{
+  grid-column: 6 / 7;
+  grid-row: 4 / 5;
+}
+
+.lukeyLogo > svg {
+  width: 100%;
+  height: 100%;
+  transition: 0.2s;
+}
+
+.lukeyLogo:hover > svg {
+  transform: rotateZ(6deg);
+}
+
+.lukeyLogo > div {
+  width: 80px;
+  height: 80px;
+  background-color: var(--dark);
+  position: absolute;
+  border: solid 1px var(--tertiary-color);
+  border-radius: 999px;
+  transition: 0.2s;
+  opacity: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.lukeyLogo > div:hover {
+  background-color: var(--primaryAlt);
+  border: solid 1px var(--primary-color);
+}
+
+.lukeyLogo > div > svg {
+  width: 40px;
+  height: 40px;
+}
+
+path {
+  transition: 0.2s;
+}
+
+.lukeyLogo > div:hover > svg > path {
+  fill: var(--primary-color);
+}
+
+.behance {
+  transform: translate( 100%, 0%);
+  transition-delay: 0.05s !important;
+}
+
+.instagram{
+  transition-delay: 0.15s !important;
+  transform: translate( -100%, 0);
+}
+
+.linkedin{
+  transition-delay: 0.125s !important;
+  transform: translate( -100%);
+}
+
+.dribbble{
+  transition-delay: 0.075s !important;
+  transform: translate( 50% , 100%);
+}
+
+.github{
+  transition-delay: 0.1s !important;
+  transform: translate( 0, 100%);
+}
+
+.shown{
+  transform: translate(0) !important;
+  opacity: 1 !important;
+}
+
+.display{
+  display: block;
+}
+
+
