--- a/app/contact/contact.css
+++ b/app/contact/contact.css
@@ -1,10 +1,10 @@
-.touch {
+.contactFill {
     -webkit-text-stroke-width: 1px ;
     -webkit-text-stroke-color: var(--primary-color);
     transition: 0.2s;
 }
 
-.contact:hover {
+.touch:hover {
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: var(--primary-color);
 }
